fix overflowing autocomplete label

--- a/src/style/_sass/components/_input.scss
+++ b/src/style/_sass/components/_input.scss
@@ -62,7 +62,6 @@ $baseline-grid: 8px !default;
     text-overflow: ellipsis;
     display: flex;
     white-space: nowrap;
-    width: 100%;
     order: 1;
     color: $base-font-color;
     pointer-events: none;
